# minesweeper

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  build.sh  config.sh  linter.sh  minesweeper.cpp
cmake/: FindGLM.cmake  FindSDL2.cmake
res/shaders/: basic.frag  basic.vert
src/: input.h  logger.h  minesweeper.cpp  platform.cpp  types.h
src/platform/: platform.h  sdl2.cpp  sdl2.h
src/renderer/: opengl.cpp  opengl.h  renderer.h  shader.cpp  shader.h
